k8s/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-backend
  labels:
    app    : weather_collector
    tier   : backend
    owner  : Aleksandr_Petrovskii1
    project: EPAM_diploma_project
spec:
  selector:
    matchLabels:
      project: EPAM_diploma_project_backend
  template:
    metadata:
      labels:
        project: EPAM_diploma_project_backend
    spec:
      containers:
        - name : django-backend
          image: petrovsky/backend:latest
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
     env  : prod
     owner: Aleksandr_Petrovskii1
spec:
  selector:
    project: EPAM_diploma_project_backend
  type: ClusterIP
  ports:
    - name      : backend-listener
      protocol  : TCP
      port      : 8000  # Port on Load Balancer
      targetPort: 8000  # Port on Pod



---

apiVersion : apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  labels:
    app    : nginx
    tier   : frontend
    owner  : Aleksandr_Petrovskii1
    project: EPAM_diploma_project
spec:
  selector:
    matchLabels:
      project: EPAM_diploma_project_frontend
  template:
    metadata:
      labels:
        project: EPAM_diploma_project_frontend
    spec:
      containers:
        - name : nginx-frontend
          image: petrovsky/frontend:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
     env  : prod
     owner: Aleksandr_Petrovskii1
spec:
  selector:
    project: EPAM_diploma_project_frontend
  type: LoadBalancer
  ports:
    - name      : frontend-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on Pod
