k8s/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: backend
  type: LoadBalancer
