k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: myhost.com
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 80
